--- a/utils/.htaccess
+++ b/utils/.htaccess
@@ -7,6 +7,6 @@ Order Deny,Allow
 Deny From All
 # Grant access to specific IP addresses:
 # Local testing (disable for live version)
-Allow From 127.0.0.1
+# Allow From 127.0.0.1
 # Live site
 Allow From 76.121.92.234
